--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,8 +1,8 @@
-<%= simple_form_for(@post) do |f| %>
+<%= simple_form_for(@event) do |f| %>
   <%= f.error_notification %>
   <div class="field">
     <div class="control">
-      <%= f.input :post, label: "Create Event", input_html: { class: "textarea "}, wrapper: false, label_html: {class: "label"}, placeholder: "Create a new article...", autofocus: true %>
+      <%= f.input :event_id, label: "Create Event", input_html: { class: "textarea "}, wrapper: false, label_html: {class: "label"}, placeholder: "Create a new article...", autofocus: true %>
     </div>
   </div>
   <%= f.button :submit, class: "button is-primary" %>
