--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -2,7 +2,9 @@
   <%= f.error_notification %>
   <div class="field">
     <div class="control">
-      <%= f.input :event_id, label: "Create Event", input_html: { class: "textarea "}, wrapper: false, label_html: {class: "label"}, placeholder: "Create a new article...", autofocus: true %>
+      <%= f.input :title, label: "Create Event", input_html: { class: "textarea "}, wrapper: false, label_html: {class: "label"}, placeholder: "Create a new article...", autofocus: true %>
+      <%= f.input :description, placeholder: "description" %>
+      <%= f.input :date, wrapper: false %>    
     </div>
   </div>
   <%= f.button :submit, class: "button is-primary" %>
