edit views for event form and user sign up

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
 	<!--main-section-->
-<main class="main-container center">
+<main class="container">
   <!-- sign up form-->
-  <section class="signup-form">
-    <div class="title center">
-      <span>Create an new account </span>
-    </div>
-    <%= render "form" %>
+  <section class="signup-form bg-light">
+    <h4 class="text-center">
+      Create a new account
+    </h4>
+    <%= render "form" , user: @user %>
   </section>
 </main>
