--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,17 +1,33 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+/* signin */
 
+.signup-form {
+  width: 350px;
+  background-color: white;
+  margin: 100px auto 0 auto;
+  padding: 35px 20px 0 20px;
+  border: 1px solid #acacac;
+}
 
+/* Input fields */
+
+.input-field {
+  margin-top: 15px;
+  margin-bottom: 20px;
+  text-align: left;
+}
+
+.inputbox {
+  width: 100%;
+  border: #c1c5c8 1px solid;
+  border-radius: 3px;
+  height: 34px;
+  padding: 0 1.2rem;
+  box-sizing: border-box;
+}
+
+/* Errors */
+
+.errors {
+  color: red;
+  text-align: left;
+}
