--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,6 +13,7 @@
           <div><%= event.date %></div>
         </div>
         <div><%= event.description %></div>
+        <input type="submit" name="commit" value="Attend" class="btn btn-success">
       </div>
     <% end %>
   </div>
