--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,8 +12,10 @@
           <h4><%= event.title %></h4>
           <div><%= event.date %></div>
         </div>
-        <div><%= event.description %></div>
-        <input type="submit" name="commit" value="Attend" class="btn btn-success">
+        <div class="d-flex justify-content-between">
+          <%= event.description %>
+          <%= button_to "Attend",  @event_attendence, class: "btn btn-success" %>
+        </div>
       </div>
     <% end %>
   </div>
