--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,46 @@
 <p id="notice"><%= notice %></p>
 <div class="container">
-  <h4>Upcoming events</h4>
+  <h2 class="text-primary">Events Attending</h2>
   <div class="results-column d-flex flex-column p-3">
-    <% current_user.created_events.each do |event| %>
-      <% if event.date > Time.now  %>
-        <div class="bg-light p-2 mb-2" >
-          <div class="d-flex justify-content-between">
-            <h4><%= event.title %></h4>
-            <div><%= event.date %></div>
-          </div>
-          <div><%= event.description %></div>
+    <% current_user.attended_events.each do |event| %>
+      <div class="bg-light p-2 mb-2" >
+        <div class="d-flex justify-content-between">
+          <h4><%= event.title %></h4>
+          <div><%= event.date %></div>
         </div>
-      <% end %>
+        <div><%= event.description %></div>
+      </div>
     <% end %>
   </div>
-  <h4>Previous events</h4>
-  <div class="results-column d-flex flex-column p-3">
-    <% current_user.created_events.each do |event| %>
-      <% if Time.now > event.date  %>
-        <div class="bg-light p-2 mb-2" >
-          <div class="d-flex justify-content-between">
-            <h4><%= event.title %></h4>
-            <div><%= event.date %></div>
+  <div>
+    <h2 class="text-success"> Created Events </h2> <br>
+    <h4>Upcoming events</h4>
+    <div class="results-column d-flex flex-column p-3">
+      <% current_user.created_events.each do |event| %>
+        <% if event.date > Time.now  %>
+          <div class="bg-light p-2 mb-2" >
+            <div class="d-flex justify-content-between">
+              <h4><%= event.title %></h4>
+              <div><%= event.date %></div>
+            </div>
+            <div><%= event.description %></div>
           </div>
-          <div><%= event.description %></div>
-        </div>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
+    <h4>Previous events</h4>
+    <div class="results-column d-flex flex-column p-3">
+      <% current_user.created_events.each do |event| %>
+        <% if Time.now > event.date  %>
+          <div class="bg-light p-2 mb-2" >
+            <div class="d-flex justify-content-between">
+              <h4><%= event.title %></h4>
+              <div><%= event.date %></div>
+            </div>
+            <div><%= event.description %></div>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
   </div>
   <button onclick="location.href = '../users';" class="btn btn-success" >Back</button>
