Fix rubocop and linters errors

--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -4,7 +4,12 @@ body {
   padding: 0;
   background-color: #eceef1;
   color: #404040;
-  font-family: "AvenirNext", Avenir, "Helvetica Neue", Helvetica, Arial,
+  font-family:
+    "AvenirNext",
+    Avenir,
+    "Helvetica Neue",
+    Helvetica,
+    Arial,
     sans-serif;
   font-size: 14px;
   min-width: 400px;
