Remove logic from views + Fix edit user

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,3 +1,4 @@
+<h3>Create a new event</h3>
 <%= simple_form_for @event, :html => {:class => "mb-5 bg-light p-4"} do |f| %>
   <%= f.error_notification %>
   <%= f.input :title, label: "Event title", placeholder: "Add title here..." %>
