--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,24 +4,14 @@
     <title>PrivateEvents</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%= stylesheet_link_tag 'https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css' %>
   </head>
-
   <body>
-  <nav class="navbar bg-warning d-flex justify-content-between align-items-center">
+    <nav class="navbar bg-warning d-flex justify-content-between align-items-center">
       <button onclick="location.href = '../home';" class="btn btn-light font-weight-bold" >Private Events</button>
-      <div>
-        <% if logged_in? %>
-          <button onclick="location.href = '../users';" class="btn btn-success mr-2" ><%= current_user.name %></button>
-          <button onclick="location.href = '../logout';" class="btn btn-success" >Logout</button>
-        <% else %>
-          <button onclick="location.href = '../signup';" class="btn btn-success mr-2" >Sign Up</button>
-          <button onclick="location.href = '../login';" class="btn btn-success" >Login</button>
-        <% end %>
-      </div>
+      <%= nav_buttons %>
     </nav>
     <%= yield %>
   </body>
